# calamares-lliurex-modules

./: CMakeLists.txt
appselector/: AppViewStep.cpp  AppViewStep.hpp  CMakeLists.txt  Config.cpp  Config.hpp  appselector.conf  appselector.qml  appselector.qrc
appselectorbackend/: main.py  module.desc
debian/: changelog  control  copyright
divertmirror/: main.py  module.desc
layoutselector/: CMakeLists.txt  Config.cpp  Config.hpp  LayoutViewStep.cpp  LayoutViewStep.hpp  layout.qml  layout.qrc  layoutselector.qml  layoutselector.qrc
layoutselectorbackend/: main.py  module.desc
lliurexactions/: main.py  module.desc
undivertmirror/: main.py  module.desc
unlockdpkgunlocker/: main.py  module.desc
